pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/16-ingress-with-proxy-body-size-empty.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-proxy-body-size-empty
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: ""

spec:
  ingressClassName: nginx
  rules:
    - host: hostname.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
